<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="swap_button">SWAP</string>
    <string name="convert_button">CONVERT</string>
    <string name="hint_recipient_email">Recipient Email</string>
    <string name="hint_amount">Amount [EUR]</string>
    <string name="hint_description">Description</string>
    <string name="pay_button">PAY</string>
    <string name="login_button">LOGIN</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="register_button">REGISTER</string>
    <string name="login_now"><u>Login Now</u></string>

    <string name="menu_home">Home</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_currency_calculator">Currency Calculator</string>
</resources>