<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.marko112.myapplication.ui.currency_calculator.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_currency_exchange"
        android:name="com.marko112.myapplication.ui.currency_calculator.CurrencyCalculatorFragment"
        android:label="@string/menu_currency_calculator"
        tools:layout="@layout/fragment_currency_calculator" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.marko112.myapplication.ui.paymenet.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />
</navigation>