<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.currency_calculator.CurrencyCalculatorFragment">

    <TextView
        android:id="@+id/fragment_paayment_accountInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Account information:"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragment_payment_accountArea2"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea2" />

    <TextView
        android:id="@+id/fragment_payment_paymentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="PAYMENT:"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragment_payment_accountArea"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea" />

    <View
        android:id="@+id/fragment_payment_accountArea"
        android:layout_width="340dp"
        android:layout_height="250dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/fragment_home_background_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_accountArea2" />

    <View
        android:id="@+id/fragment_payment_accountArea2"
        android:layout_width="340dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/fragment_home_background_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_payment_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/fragment_payment_emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_name" />

    <TextView
        android:id="@+id/fragment_payment_moneyAmmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/fragment_payment_balanceTextView"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_Email" />

    <EditText
        android:id="@+id/fragment_payment_userNameToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_recipient_email"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/fragment_payment_accountArea"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea"
        app:layout_constraintTop_toTopOf="@+id/fragment_payment_accountArea" />

    <EditText
        android:id="@+id/fragment_payment_ammountToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/light_yellow"
        app:layout_constraintEnd_toEndOf="@+id/fragment_payment_accountArea"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_userNameToPay" />

    <EditText
        android:id="@+id/fragment_payment_paymentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/light_yellow"
        app:layout_constraintEnd_toEndOf="@+id/fragment_payment_accountArea"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_ammountToPay" />

    <Button
        android:id="@+id/fragment_payment_payButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/pay_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_accountArea" />

    <TextView
        android:id="@+id/fragment_payment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fragment_payment_nameTextView"
        app:layout_constraintTop_toTopOf="@+id/fragment_payment_accountArea2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="EUR"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/fragment_payment_moneyAmmount"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_Email" />

    <TextView
        android:id="@+id/fragment_payment_nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="Name:"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea2"
        app:layout_constraintTop_toTopOf="@+id/fragment_payment_accountArea2" />

    <TextView
        android:id="@+id/fragment_payment_emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:text="E-mail:"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea2"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_nameTextView" />

    <TextView
        android:id="@+id/fragment_payment_balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Balance:"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_payment_accountArea2"
        app:layout_constraintTop_toBottomOf="@+id/fragment_payment_emailTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>